--- a/ESPCamWebServer/platformio.ini
+++ b/ESPCamWebServer/platformio.ini
@@ -14,3 +14,7 @@ board = esp32cam
 framework = arduino
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^2.1.0
+	ArduinoHttpClient 
+
+upload_speed = 115200
+monitor_speed = 115200
